--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,8 +8,8 @@
   <body>
     before
     <br />
-
-    <%- body %>
+    <%- include('../partials/header.ejs') %> <%-
+    include('../partials/errorMessage.ejs') %> <%- body %>
 
     <br />
     after
